--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # Ignore everything in the root except the "wp-content" directory.
 /*
 !.gitignore
+!readme.md
 !wp-content/
-
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
 wp-content/*
